:heavy_plus_sign: add logger

--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -1,5 +1,9 @@
-name: main
-on: [ push ]
+name: Verify
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 jobs:
   build:
     runs-on: macos-latest
