--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cached_network_image: ^3.2.3
   intl: ^0.17.0
   url_launcher: ^6.1.7
+  logging: ^1.1.0
 
 dev_dependencies:
   flutter_test:
