--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mangabox
 description: Help you manage your manga collection
 publish_to: 'none'
-version: 0.3.0+1
+version: 0.4.0+1
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -20,6 +20,8 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.1.7
   logging: ^1.1.0
+  package_info_plus: ^3.0.2
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
