--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mangabox
 description: Help you manage your manga collection
 publish_to: 'none'
-version: 0.5.0+1
+version: 0.6.0+1
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -11,13 +11,14 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
+  firebase_auth: ^4.2.1
   get_it: ^7.2.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
   flutter_bloc: ^8.1.1
   gap: ^2.0.1
   cached_network_image: ^3.2.3
-  intl: ^0.18.0
+  intl: ^0.17.0
   url_launcher: ^6.1.7
   logging: ^1.1.0
   package_info_plus: ^3.0.2
