--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.4.0
-  cloud_firestore: ^4.2.0
-  firebase_auth: ^4.2.1
+  firebase_core: ^2.4.1
+  cloud_firestore: ^4.3.1
+  firebase_auth: ^4.2.4
   get_it: ^7.2.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
@@ -23,6 +23,7 @@ dependencies:
   logging: ^1.1.0
   package_info_plus: ^3.0.2
   device_info_plus: ^8.0.0
+  go_router: ^6.0.0
 
 dev_dependencies:
   flutter_test:
