--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
-  firebase_auth: ^4.2.4
+  firebase_auth: ^4.2.5
   get_it: ^7.2.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
@@ -23,7 +23,8 @@ dependencies:
   logging: ^1.1.0
   package_info_plus: ^3.0.2
   device_info_plus: ^8.0.0
-  go_router: ^6.0.0
+  go_router: ^6.0.1
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
